@@ -16,6 +16,7 @@ ChangeLog
     * Download object replaced by Transfer object
     * Refactor of Transfer object, added reset method
     * Implementation of START_URL_DOWNLOAD and START_CONNECT_DOWNLOAD commands
+    * Added RegistrationStatus constants
 
 0.5.0 (2021-07-14)
     * FILE_CHANGED event sends free_space
